--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.5.0",
-    "sass": "^1.23.7",
+    "sass": "1.23.7",
     "sass-loader": "^8.0.0",
     "svg-sprite-loader": "^4.1.6",
     "svg-sprite-loader-mod": "^4.1.6-mod1",
